--- a/movie_statistics.ipynb
+++ b/movie_statistics.ipynb
@@ -716,27 +716,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Title                  0.0\n",
-       "Genre                  0.0\n",
-       "Description            0.0\n",
-       "Director               0.0\n",
-       "Actors                 0.0\n",
-       "Year                   0.0\n",
-       "Runtime (Minutes)      0.0\n",
-       "Rating                 0.0\n",
-       "Votes                  0.0\n",
-       "Revenue (Millions)    12.8\n",
-       "Metascore              6.4\n",
+       "Title                 0.0\n",
+       "Genre                 0.0\n",
+       "Description           0.0\n",
+       "Director              0.0\n",
+       "Actors                0.0\n",
+       "Year                  0.0\n",
+       "Runtime (Minutes)     0.0\n",
+       "Rating                0.0\n",
+       "Votes                 0.0\n",
+       "Revenue (Millions)    0.0\n",
+       "Metascore             0.0\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,284 +755,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Genre</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Director</th>\n",
-       "      <th>Actors</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Runtime (Minutes)</th>\n",
-       "      <th>Rating</th>\n",
-       "      <th>Votes</th>\n",
-       "      <th>Revenue (Millions)</th>\n",
-       "      <th>Metascore</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rank</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Guardians of the Galaxy</td>\n",
-       "      <td>Action,Adventure,Sci-Fi</td>\n",
-       "      <td>A group of intergalactic criminals are forced ...</td>\n",
-       "      <td>James Gunn</td>\n",
-       "      <td>Chris Pratt, Vin Diesel, Bradley Cooper, Zoe S...</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>121</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>757074</td>\n",
-       "      <td>333.13</td>\n",
-       "      <td>76.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Prometheus</td>\n",
-       "      <td>Adventure,Mystery,Sci-Fi</td>\n",
-       "      <td>Following clues to the origin of mankind, a te...</td>\n",
-       "      <td>Ridley Scott</td>\n",
-       "      <td>Noomi Rapace, Logan Marshall-Green, Michael Fa...</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>124</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>485820</td>\n",
-       "      <td>126.46</td>\n",
-       "      <td>65.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Split</td>\n",
-       "      <td>Horror,Thriller</td>\n",
-       "      <td>Three girls are kidnapped by a man with a diag...</td>\n",
-       "      <td>M. Night Shyamalan</td>\n",
-       "      <td>James McAvoy, Anya Taylor-Joy, Haley Lu Richar...</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>117</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>157606</td>\n",
-       "      <td>138.12</td>\n",
-       "      <td>62.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Sing</td>\n",
-       "      <td>Animation,Comedy,Family</td>\n",
-       "      <td>In a city of humanoid animals, a hustling thea...</td>\n",
-       "      <td>Christophe Lourdelet</td>\n",
-       "      <td>Matthew McConaughey,Reese Witherspoon, Seth Ma...</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>108</td>\n",
-       "      <td>7.2</td>\n",
-       "      <td>60545</td>\n",
-       "      <td>270.32</td>\n",
-       "      <td>59.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Suicide Squad</td>\n",
-       "      <td>Action,Adventure,Fantasy</td>\n",
-       "      <td>A secret government agency recruits some of th...</td>\n",
-       "      <td>David Ayer</td>\n",
-       "      <td>Will Smith, Jared Leto, Margot Robbie, Viola D...</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>123</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>393727</td>\n",
-       "      <td>325.02</td>\n",
-       "      <td>40.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>994</th>\n",
-       "      <td>Resident Evil: Afterlife</td>\n",
-       "      <td>Action,Adventure,Horror</td>\n",
-       "      <td>While still out to destroy the evil Umbrella C...</td>\n",
-       "      <td>Paul W.S. Anderson</td>\n",
-       "      <td>Milla Jovovich, Ali Larter, Wentworth Miller,K...</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>97</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>140900</td>\n",
-       "      <td>60.13</td>\n",
-       "      <td>37.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>Project X</td>\n",
-       "      <td>Comedy</td>\n",
-       "      <td>3 high school seniors throw a birthday party t...</td>\n",
-       "      <td>Nima Nourizadeh</td>\n",
-       "      <td>Thomas Mann, Oliver Cooper, Jonathan Daniel Br...</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>88</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>164088</td>\n",
-       "      <td>54.72</td>\n",
-       "      <td>48.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>997</th>\n",
-       "      <td>Hostel: Part II</td>\n",
-       "      <td>Horror</td>\n",
-       "      <td>Three American college students studying abroa...</td>\n",
-       "      <td>Eli Roth</td>\n",
-       "      <td>Lauren German, Heather Matarazzo, Bijou Philli...</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>94</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>73152</td>\n",
-       "      <td>17.54</td>\n",
-       "      <td>46.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>Step Up 2: The Streets</td>\n",
-       "      <td>Drama,Music,Romance</td>\n",
-       "      <td>Romantic sparks occur between two dance studen...</td>\n",
-       "      <td>Jon M. Chu</td>\n",
-       "      <td>Robert Hoffman, Briana Evigan, Cassie Ventura,...</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>98</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>70699</td>\n",
-       "      <td>58.01</td>\n",
-       "      <td>50.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1000</th>\n",
-       "      <td>Nine Lives</td>\n",
-       "      <td>Comedy,Family,Fantasy</td>\n",
-       "      <td>A stuffy businessman finds himself trapped ins...</td>\n",
-       "      <td>Barry Sonnenfeld</td>\n",
-       "      <td>Kevin Spacey, Jennifer Garner, Robbie Amell,Ch...</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>87</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>12435</td>\n",
-       "      <td>19.64</td>\n",
-       "      <td>11.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>838 rows × 11 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                         Title                     Genre  \\\n",
-       "Rank                                                       \n",
-       "1      Guardians of the Galaxy   Action,Adventure,Sci-Fi   \n",
-       "2                   Prometheus  Adventure,Mystery,Sci-Fi   \n",
-       "3                        Split           Horror,Thriller   \n",
-       "4                         Sing   Animation,Comedy,Family   \n",
-       "5                Suicide Squad  Action,Adventure,Fantasy   \n",
-       "...                        ...                       ...   \n",
-       "994   Resident Evil: Afterlife   Action,Adventure,Horror   \n",
-       "995                  Project X                    Comedy   \n",
-       "997            Hostel: Part II                    Horror   \n",
-       "998     Step Up 2: The Streets       Drama,Music,Romance   \n",
-       "1000                Nine Lives     Comedy,Family,Fantasy   \n",
-       "\n",
-       "                                            Description              Director  \\\n",
-       "Rank                                                                            \n",
-       "1     A group of intergalactic criminals are forced ...            James Gunn   \n",
-       "2     Following clues to the origin of mankind, a te...          Ridley Scott   \n",
-       "3     Three girls are kidnapped by a man with a diag...    M. Night Shyamalan   \n",
-       "4     In a city of humanoid animals, a hustling thea...  Christophe Lourdelet   \n",
-       "5     A secret government agency recruits some of th...            David Ayer   \n",
-       "...                                                 ...                   ...   \n",
-       "994   While still out to destroy the evil Umbrella C...    Paul W.S. Anderson   \n",
-       "995   3 high school seniors throw a birthday party t...       Nima Nourizadeh   \n",
-       "997   Three American college students studying abroa...              Eli Roth   \n",
-       "998   Romantic sparks occur between two dance studen...            Jon M. Chu   \n",
-       "1000  A stuffy businessman finds himself trapped ins...      Barry Sonnenfeld   \n",
-       "\n",
-       "                                                 Actors  Year  \\\n",
-       "Rank                                                            \n",
-       "1     Chris Pratt, Vin Diesel, Bradley Cooper, Zoe S...  2014   \n",
-       "2     Noomi Rapace, Logan Marshall-Green, Michael Fa...  2012   \n",
-       "3     James McAvoy, Anya Taylor-Joy, Haley Lu Richar...  2016   \n",
-       "4     Matthew McConaughey,Reese Witherspoon, Seth Ma...  2016   \n",
-       "5     Will Smith, Jared Leto, Margot Robbie, Viola D...  2016   \n",
-       "...                                                 ...   ...   \n",
-       "994   Milla Jovovich, Ali Larter, Wentworth Miller,K...  2010   \n",
-       "995   Thomas Mann, Oliver Cooper, Jonathan Daniel Br...  2012   \n",
-       "997   Lauren German, Heather Matarazzo, Bijou Philli...  2007   \n",
-       "998   Robert Hoffman, Briana Evigan, Cassie Ventura,...  2008   \n",
-       "1000  Kevin Spacey, Jennifer Garner, Robbie Amell,Ch...  2016   \n",
-       "\n",
-       "      Runtime (Minutes)  Rating   Votes  Revenue (Millions)  Metascore  \n",
-       "Rank                                                                    \n",
-       "1                   121     8.1  757074              333.13       76.0  \n",
-       "2                   124     7.0  485820              126.46       65.0  \n",
-       "3                   117     7.3  157606              138.12       62.0  \n",
-       "4                   108     7.2   60545              270.32       59.0  \n",
-       "5                   123     6.2  393727              325.02       40.0  \n",
-       "...                 ...     ...     ...                 ...        ...  \n",
-       "994                  97     5.9  140900               60.13       37.0  \n",
-       "995                  88     6.7  164088               54.72       48.0  \n",
-       "997                  94     5.5   73152               17.54       46.0  \n",
-       "998                  98     6.2   70699               58.01       50.0  \n",
-       "1000                 87     5.3   12435               19.64       11.0  \n",
-       "\n",
-       "[838 rows x 11 columns]"
+       "Title                 0.0\n",
+       "Genre                 0.0\n",
+       "Description           0.0\n",
+       "Director              0.0\n",
+       "Actors                0.0\n",
+       "Year                  0.0\n",
+       "Runtime (Minutes)     0.0\n",
+       "Rating                0.0\n",
+       "Votes                 0.0\n",
+       "Revenue (Millions)    0.0\n",
+       "Metascore             0.0\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_movies.dropna(axis=0)"
+    "df_movies.dropna(axis=0, inplace=True)\n",
+    "percent_missing = ((df_movies.isnull().sum()) / len(df_movies))*100\n",
+    "percent_missing"
    ]
   },
   {
